add section course-features

--- a/index.html
+++ b/index.html
@@ -117,6 +117,61 @@
                 </div>
             </div>
         </section>
+        <section class="course-features">
+          <div class="container">
+            <div class="course-features__wrapper">
+              <div class="course-features__image">
+              <img src="images/course-features-image.png" alt="course-features-image">
+              </div>
+              <div class="course-features__content">
+                <h2 class="course-features__title">Access to Everything For Everyone</h2>
+                <p class="course-features__text">Online learning program designed to prepare you for a  career. Courses include recorded video lectures, auto graded</p>
+                <div class="course-features__items">
+                <div class="course-features__items-wrapper">
+                  <div class="course-features__item">
+                    <div class="course-features__item-check">
+                      <svg class="course-features__item-check-icon" width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                       <path d="M4.95831 10.9733L0.208313 6.22326L1.39581 5.03576L4.95831 8.59826L12.6041 0.952423L13.7916 2.13992L4.95831 10.9733Z" fill="white"/>
+                      </svg>
+                    </div>
+                    <span class="course-features__item-name">World-Class</span>
+                  </div>
+                  <div class="course-features__item">
+                    <div class="course-features__item-check">
+                      <svg class="course-features__item-check-icon" width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                       <path d="M4.95831 10.9733L0.208313 6.22326L1.39581 5.03576L4.95831 8.59826L12.6041 0.952423L13.7916 2.13992L4.95831 10.9733Z" fill="white"/>
+                      </svg>
+                    </div>
+                    <span class="course-features__item-name">Affordable</span>
+                  </div>
+                </div>
+                <div class="course-features__items-wrapper">
+                  <div class="course-features__item">
+                    <div class="course-features__item-check">
+                      <svg class="course-features__item-check-icon" width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                       <path d="M4.95831 10.9733L0.208313 6.22326L1.39581 5.03576L4.95831 8.59826L12.6041 0.952423L13.7916 2.13992L4.95831 10.9733Z" fill="white"/>
+                      </svg>
+                    </div>
+                    <span class="course-features__item-name">Flexible</span>
+                  </div>
+                  <div class="course-features__item">
+                    <div class="course-features__item-check">
+                      <svg class="course-features__item-check-icon" width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                       <path d="M4.95831 10.9733L0.208313 6.22326L1.39581 5.03576L4.95831 8.59826L12.6041 0.952423L13.7916 2.13992L4.95831 10.9733Z" fill="white"/>
+                      </svg>
+                    </div>
+                    <span class="course-features__item-name">Job-relevant</span>
+                  </div>
+                </div>
+                </div>
+                <a href="#" class="app-btn">Get Started</a>
+              </div>
+            </div>
+          </div>
+          <svg class="course-features__shape" width="640" height="613" viewBox="0 0 715 664" fill="none" xmlns="http://www.w3.org/2000/svg">
+           <path d="M253.352 107.49C121.752 53.0935 36.8523 160.819 10.8523 221.482C-49.6477 428.468 146.352 781.943 510.352 624.954C874.352 467.965 660.352 85.9912 563.852 14.4961C467.352 -56.999 417.852 175.485 253.352 107.49Z" fill="#D7F2F8"/>
+          </svg>
+        </section>
     </main>
     <script src="Script/app.js"></script>
 </body>
