add section job-position

--- a/index.html
+++ b/index.html
@@ -172,6 +172,32 @@
            <path d="M253.352 107.49C121.752 53.0935 36.8523 160.819 10.8523 221.482C-49.6477 428.468 146.352 781.943 510.352 624.954C874.352 467.965 660.352 85.9912 563.852 14.4961C467.352 -56.999 417.852 175.485 253.352 107.49Z" fill="#D7F2F8"/>
           </svg>
         </section>
+        <section class="job-position">
+          <div class="container">
+            <div class="job-position__wrapper">
+              <div class="job-position__content">
+                <div class="job-position__image">
+                  <img src="images/job-teacher.jpg" alt="become-teacher-image">
+                </div>
+                <div class="job-position__description">
+                  <h4 class="job-position__title">Become a Teacher</h4>
+                  <p class="job-position__text">Anenim Njilam tempor sapier gravida done porta and b adrdit ipsum enim</p>
+                  <a herf="#" class="app-btn">Strat Teaching</a>
+                </div>
+              </div>
+              <div class="job-position__content">
+                <div class="job-position__image">
+                  <img src="images/job-corrector.jpg" alt="corrector-business-image">
+                </div>
+                <div class="job-position__description">
+                  <h4 class="job-position__title">Corrector for Business</h4>
+                  <p class="job-position__text">Anenim Njilam tempor sapier gravida done porta and b adrdit ipsum enim</p>
+                  <a herf="#" class="app-btn">For your Business</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <script src="Script/app.js"></script>
 </body>
