add section course-quality

--- a/index.html
+++ b/index.html
@@ -198,6 +198,28 @@
             </div>
           </div>
         </section>
+        <section class="course-quality">
+          <div class="container">
+            <div class="course-quality__wrapper">
+              <div class="course-quality__content">
+                <h2 class="course-quality__title">Our Process Build Around Quality & Make it Perfect</h2>
+                <p class="course-quality__text">Anenim Njilam tempor sapier gravida done porta and b
+                 adrdit ipsum enim justo integer actor imeer congue magna and purus pretlium insuss igula nurtrum luctue<br><br>Anenim Njilam tempor sapier gravida done porta and b
+                 adrdit ipsum enim justo integer actor imeer congue
+                </p>
+                <a href="#" class="app-btn">Get Started</a>
+              </div>
+              <div class="course-quality__video">
+                <div class="course-quality__play-btn">
+                  <svg class="course-quality__play-icon" width="29" height="32" viewBox="0 0 29 32" fill="blue" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M27.5 13.4019C29.5 14.5566 29.5 17.4434 27.5 18.5981L5 31.5885C3 32.7432 0.499998 31.2998 0.499999 28.9904L0.5 3.00962C0.5 0.700216 3 -0.743159 5 0.411542L27.5 13.4019Z"/>
+                  </svg>
+                </div>
+                <img class="course-quality__image" src="images/course-quality.png" alt="course-quality-image">
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <script src="Script/app.js"></script>
 </body>
