add section student-comments

--- a/index.html
+++ b/index.html
@@ -220,6 +220,99 @@
             </div>
           </div>
         </section>
+        <section class="student-comments">
+          <div class="container">
+            <div class="student-comments__header">
+              <h2 class="student-comments__header-title">What Our Students say</h2>
+              <a href="#" class="app-btn">Discover More</a>
+            </div>
+            <div class="student-comments__wrapper">
+              <div class="row">
+                <div class="col-12 col-sm-6 col-lg-4">
+                 <div class="student-comment">
+                  <div class="student-comment__profile">
+                  <img src="images/student-comment-img1.jpg" class="student-comment__profile-image" alt="student-profile-image">
+                  <div class="student-comment__profile-title">
+                    <h4 class="student-comment__profile-name">Michal Gun</h4>
+                    <span class="student-comment__profile-job">Word Press Student</span>
+                    <div class="student-comment__profile-stars">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                    </div>
+                  </div>
+                  </div>
+                  <div class="divider">
+                    <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22.0143 0L24 3.54945C19.2344 4.38462 18.9256 8.35165 19.3668 10.2308H23.5587V19H14.2924C14.0717 17.8864 13.7629 14.2396 14.2924 8.56044C14.8219 2.88132 19.661 0.487179 22.0143 0Z" fill="black"/>
+                    <path d="M8.01435 0L10 3.54945C5.23444 4.38462 4.92556 8.35165 5.36681 10.2308H9.55874V19H0.292368C0.0717403 17.8864 -0.237139 14.2396 0.292368 8.56044C0.821876 2.88132 5.66098 0.487179 8.01435 0Z" fill="black"/>
+                    </svg>
+                  </div>
+                  <p class="student-comment__content">
+                  A enim Njilam tempor sapier gravida done porta and b adrdit ipsum enim justo integer actor imeer congue 
+                  </p>
+                 </div>  
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                 <div class="student-comment">
+                  <div class="student-comment__profile">
+                  <img src="images/student-comment-img2.jpg" class="student-comment__profile-image" alt="student-profile-image">
+                  <div class="student-comment__profile-title">
+                    <h4 class="student-comment__profile-name">Danial waska</h4>
+                    <span class="student-comment__profile-job">Branding Student</span>
+                    <div class="student-comment__profile-stars">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                    </div>
+                  </div>
+                  </div>
+                  <div class="divider">
+                  <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22.0143 0L24 3.54945C19.2344 4.38462 18.9256 8.35165 19.3668 10.2308H23.5587V19H14.2924C14.0717 17.8864 13.7629 14.2396 14.2924 8.56044C14.8219 2.88132 19.661 0.487179 22.0143 0Z" fill="black"/>
+                    <path d="M8.01435 0L10 3.54945C5.23444 4.38462 4.92556 8.35165 5.36681 10.2308H9.55874V19H0.292368C0.0717403 17.8864 -0.237139 14.2396 0.292368 8.56044C0.821876 2.88132 5.66098 0.487179 8.01435 0Z" fill="black"/>
+                  </svg>
+                  </div>
+                  <p class="student-comment__content">
+                  A enim Njilam tempor sapier gravida done porta and b adrdit ipsum enim justo integer actor imeer congue 
+                  </p>
+                 </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                  <div class="student-comment">
+                   <div class="student-comment__profile">
+                  <img src="images/student-comment-img3.jpg" class="student-comment__profile-image" alt="student-profile-image">
+                  <div class="student-comment__profile-title">
+                    <h4 class="student-comment__profile-name">Stive Smith</h4>
+                    <span class="student-comment__profile-job">Digital Marketing Student</span>
+                    <div class="student-comment__profile-stars">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                      <img src="images/Star 4.jpg">
+                    </div>
+                  </div>
+                   </div>
+                   <div class="divider">
+                  <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22.0143 0L24 3.54945C19.2344 4.38462 18.9256 8.35165 19.3668 10.2308H23.5587V19H14.2924C14.0717 17.8864 13.7629 14.2396 14.2924 8.56044C14.8219 2.88132 19.661 0.487179 22.0143 0Z" fill="black"/>
+                    <path d="M8.01435 0L10 3.54945C5.23444 4.38462 4.92556 8.35165 5.36681 10.2308H9.55874V19H0.292368C0.0717403 17.8864 -0.237139 14.2396 0.292368 8.56044C0.821876 2.88132 5.66098 0.487179 8.01435 0Z" fill="black"/>
+                  </svg>
+                   </div>
+                   <p class="student-comment__content">
+                  A enim Njilam tempor sapier gravida done porta and b adrdit ipsum enim justo integer actor imeer congue 
+                   </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <script src="Script/app.js"></script>
 </body>
