add section footer

--- a/index.html
+++ b/index.html
@@ -314,6 +314,91 @@
           </div>
         </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="row full-width">
+            <div class="col-12 col-md-3 order">
+              <div class="footer__section-left">
+                 <a herf="#" class="logo">Edu.dot</a>
+                 <div class="footer__social-media">
+                   <a href="#" class="footer__social-media-img">
+                     <img src="images/twitter.jpg" alt="twitter-image">
+                   </a>
+                   <a href="#" class="footer__social-media-img">
+                     <img src="images/facebook (2).jpg" alt="facebook-image">
+                   </a>
+                   <a href="#" class="footer__social-media-img">
+                     <img src="images/instagram.jpg" alt="instagram-image">
+                   </a>
+                 </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-9">
+              <div class="footer__section-right">
+                <div class="row full-width">
+                  <div class="col-6 col-sm-3">
+                    <div class="footer__menu">
+                     <h4 class="footer__menu__title">E learn</h4>
+                     <ul class="footer-nav">
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">About</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">What Learner</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Leadership</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Careers</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Catalog</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Inspiration</a></li>
+                     </ul>
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm-3">
+                    <div class="footer__menu">
+                      <h4 class="footer__menu__title">Courses</h4>
+                      <ul class="footer-nav">
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Classroom</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Virtual</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">E-learning</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Video</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Online</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm-3">
+                    <div class="footer__menu">
+                      <h4 class="footer__menu__title">Community</h4>
+                      <ul class="footer-nav">
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Learners</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Partners</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Competitor</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Transaction</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Blog</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Teaching Center</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm-3">
+                    <div class="footer__menu">
+                      <h4 class="footer__menu__title">Quick Links</h4>
+                      <ul class="footer-nav">
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Home</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Education</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Courses</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Admissions</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Testimonial</a></li>
+                <li class="footer-nav__item"><a class="footer-nav__link" href="#">Programs</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="investing-box">
+          <h2 class="investing-box__title">It’s Time to Start Investing in Yourself in Learning</h2>
+          <a href="#" class="investing-box__btn">Get Started</a>
+      </div>
+    </footer>
     <script src="Script/app.js"></script>
 </body>
 </html>
