--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
        </div>
        <img class="header__books-left" src="images/header-books.png" alt="books-image">
-       <img class="header__books-right" src="images/header-book.png" alt="books-image">
+       <img class="header__books-right" src="images/header-book2.png" alt="books-image">
     </header>
     <main class="main">
         <section class="how-it-work">
